clusters/production/apps/policy-reporter-production/namespace-policy-reporter-production.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: policy-reporter-production
  labels:
    app.kubernetes.io/part-of: production
